--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Max Portfolio</title>
 </head>
 <body>
-    <h1>Personal portfolio page v3</h1>
+    <h1>Personal portfolio page new version</h1>
 
     <hr>
 
