--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Portfolio</title>
 </head>
-<body>
-    <h1>Personal portfolio page v4</h1>
-
-    <hr>
-
-    <div class="logo"></div>
+<body class="">
+    <div class="main"></div>
+    <div class="side"></div>
 </body>
 </html>
